--- a/camp/back/package.json
+++ b/camp/back/package.json
@@ -18,5 +18,8 @@
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0"
   }
 }
